--- a/main.html
+++ b/main.html
@@ -180,7 +180,7 @@
             const content = document.getElementById('notepad').value;
 
             try {
-                const response = await fetch("http://localhost:3000/save", {
+                const response = await fetch("https://newcodex-1.onrender.com/save", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ access_code, content })
