--- a/main.html
+++ b/main.html
@@ -159,7 +159,7 @@
             }
 
             try {
-                const response = await fetch(`https://newcodex-1.onrender.com/getNote?accessCode=${accessCode}`);
+                const response = await fetch(`http://localhost:3000/getNote?accessCode=${accessCode}`);
                 const data = await response.json();
 
                 document.getElementById('notepadContainer').style.display = 'block';
@@ -180,7 +180,7 @@
             const content = document.getElementById('notepad').value;
 
             try {
-                const response = await fetch("https://newcodex-1.onrender.com/save", {
+                const response = await fetch("http://localhost:3000/save", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ access_code, content })
